2006-09-06  Phil Muldoon  <pmuldoon@redhat.com>

	* Syscall.java: numArgs, argList make public final

2006-09-06  Mark Wielaard  <mark@klomp.org>

	* TaskState.java (SyscallRunning): Removed, merged with Running.

2006-09-05  Mark Wielaard  <mark@klomp.org>

	* TaskState.java (syscallBlockedEnteringSyscall): Removed, merge
	with syscallBlockedInSyscallContinue.

2006-09-04  Mark Wielaard  <mark@klomp.org>

	* TestSyscallRunning.java: Added back, use SYSread and write to
	Socket.

2006-09-04  Yao Qi  <qiyaoltc@cn.ibm.com>

	* LinuxPPC.java (returnCode): Extract sign of return code from
	CCR register.

2006-09-01  Mark Wielaard  <mark@klomp.org>

	* TestSyscallRunning.java: Removed doesn't compile on x86.

2006-09-01  Mark Wielaard  <mark@klomp.org>

	* TaskState.java (runningInSyscall): Handle adding of Observer and
	SyscallObserver.
	* TestSyscallRunning.java: New file.

2006-09-01  Wu Zhou  <woodzltc@cn.ibm.com>

	Yong Zheng's patch to delete redundant testcases.
	2006-09-01  Yong Zheng  <zhengy@cn.ibm.com>

		* TestI386Regs.java: Delete.
		* TestX8664Regs.java: Delete.

2006-08-31  Yao Qi  <qiyaoltc@cn.ibm.com>

	* TestRegs.java: Copy the tests for length of segment registers
	from TetI386Regs.java and TestX8664Regs.java.
	New test for length of register ccr and xer on PPC64.

2006-08-30  Mark Wielaard  <mark@klomp.org>

	* TaskState.java: Merge detaching and detachingInSyscall states.

2006-08-29  Mark Wielaard  <mark@klomp.org>

	* TaskState.java (transitionToSyscallRunningState): Add signal
	parameter.

2006-08-25  Yao Qi  <qiyaoltc@cn.ibm.com>

	* IsaIA32.java: New class for 16-bit segment register on IA32.
	* TestI386Regs.java: Test length of segment register.

	* IsaEMT64.java: New class for 32-bit segment registers on X86_64.
	* TestX8664Regs.java: Test length of segment register.

	* IsaPPC64.java: New class for 32-bit registers on PPC64.

2006-08-29  Yong Zheng  <zhengyo@cn.ibm.com>

	* IsaPPC64.java (getWordSize): Edit the return value from 4 to 8.