@@ -1,3 +1,8 @@
+2006-09-06  Mark Wielaard  <mark@klomp.org>
+
+	* TaskState (transitionToSyscallRunningState): Removed, merged with
+	transitionToRunningState.
+
 2006-09-06  Phil Muldoon  <pmuldoon@redhat.com>
 
 	* Syscall.java: numArgs, argList make public final
